Updated Source.cpp to store file content into vector

--- a/Assignment 2/Assignment 2.vcxproj.filters
+++ b/Assignment 2/Assignment 2.vcxproj.filters
@@ -15,16 +15,16 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <Text Include="..\..\StudentData.txt">
-      <Filter>Resource Files</Filter>
-    </Text>
-    <Text Include="..\..\StudentData_Emails.txt">
-      <Filter>Resource Files</Filter>
-    </Text>
-  </ItemGroup>
-  <ItemGroup>
     <ClCompile Include="Source.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="StudentData.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
+    <Text Include="StudentData_Emails.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
   </ItemGroup>
 </Project>
