--- a/Assignment 2/Assignment 2.vcxproj
+++ b/Assignment 2/Assignment 2.vcxproj
@@ -127,11 +127,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <Text Include="..\..\StudentData.txt" />
-    <Text Include="..\..\StudentData_Emails.txt" />
+    <ClCompile Include="Source.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Source.cpp" />
+    <Text Include="StudentData.txt" />
+    <Text Include="StudentData_Emails.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
